New website name

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "websitebits"
+  title: "my website"
   navbar:
     left:
       - href: index.qmd
